# wrac-plugin-template

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_JA.md  code-review-checklist.md  rust-toolchain.toml
.github/workflows/: ci.yml  smoke-test.yml
clap_wrapper_builder/: CMakeLists.txt  README.md  build_wrapper_plugin.sh  build_wrapper_plugin_static.sh  install_wrapper_plugin.sh
clap_wrapper_builder/clap-wrapper/cmake/: make_clapfirst.cmake
clap_wrapper_builder/clap-wrapper/include/clapwrapper/: wrac.h
clap_wrapper_builder/clap-wrapper/src/: clap_proxy.cpp  clap_proxy.h  wrapasauv2.cpp  wrapasvst3.cpp  wrapasvst3.h  wrapasvst3_entry.cpp
clap_wrapper_builder/clap-wrapper/src/detail/aax/: process.cpp  process.h  wrapper.cpp  wrapper.h
clap_wrapper_builder/clap-wrapper/src/detail/auv2/: auv2_base_classes.h  auv2_shared.h  parameter.cpp  wrappedview.asinclude.mm
clap_wrapper_builder/clap-wrapper/src/detail/auv2/build-helper/: build-helper.cpp
clap_wrapper_builder/clap-wrapper/src/detail/clap/: fsutil.cpp  fsutil.h
clap_wrapper_builder/clap-wrapper/src/detail/vst3/: plugview.cpp  state.h
cmake/: make_clapfirst.cmake  top_level_default.cmake
crates/run_loop_timer/src/: lib.rs
crates/wrac_build/: Cargo.toml
crates/wrac_build/src/: lib.rs
crates/wrac_clap_adapter/: Cargo.toml  README.md
crates/wrac_clap_adapter/src/: abi.rs  api.rs  core.rs  descriptor.rs  entry.rs  events.rs  factory.rs  host_gui.rs  host_state.rs  lib.rs  params.rs  run_loop_factory.rs
crates/wrac_clap_adapter/src/abi/: audio_ports.rs  configurable_audio_ports.rs  ffi.rs  gui_extension.rs  latency_extension.rs  note_ports.rs  params_extension.rs  render_extension.rs  state_extension.rs  tail_extension.rs
crates/wrac_clap_adapter/src/api/: core.rs  extensions.rs  host.rs  params.rs  process.rs  types.rs
crates/wrac_clap_adapter/src/api/extensions/: audio_ports.rs  configurable_audio_ports.rs  gui.rs  latency.rs  note_ports.rs  params.rs  render.rs  state.rs  tail.rs
crates/wrac_host_context/: Cargo.toml
crates/wrac_host_context/src/: lib.rs
crates/wrac_log/src/: file_logger.rs  lib.rs  rt.rs  test.rs
crates/wrac_manifest/: Cargo.toml
crates/wrac_manifest/src/: lib.rs
crates/wrac_wxp_gui/: Cargo.toml  README.md
crates/wrac_wxp_gui/src/: controller.rs  dpi.rs  host_policy.rs  lib.rs  resize_drag.rs  runtime.rs  session.rs
crates/wrac_wxp_gui/src/commands/: resize.rs
crates/wrac_xtask/: Cargo.toml
crates/wrac_xtask/src/: cli.rs  commands.rs  context.rs  lib.rs  metadata.rs  plan.rs  targets.rs  util.rs  validation.rs
crates/wrac_xtask/src/validation/: checks.rs  clap_schema.rs  report.rs
docs/: aax-ja.md  aax.md  architecture.md  architecture_JA.md  code-review-checklist-ja.md  code-review-checklist.md  getting-started.md  main-thread-hook-plan-ja.md  product-code-review-checklist.md  production-readiness-checks-ja.md  production-readiness-checks.md  setup-ja.md  setup.md  setup_JA.md  validation.md
examples/gain_plugin/script/: build.sh  build_and_install.sh  build_standalone.sh  build_wrapper.sh
examples/gain_plugin/src-plugin/: Cargo.toml  build.rs
plugins/wrac-gain/parameter-contract/: Cargo.toml
plugins/wrac-gain/parameter-contract/src/: lib.rs
plugins/wrac-gain/src-gui/: README.md  package-lock.json  package.json  vite.config.ts
plugins/wrac-gain/src-gui/src/: main.ts
plugins/wrac-gain/src-gui/src/wracRuntime/: nativeCursorBridge.ts
plugins/wrac-gain/src-plugin/: Cargo.toml  build.rs  wrac-plugin.toml
plugins/wrac-gain/src-plugin/src/: audio.rs  commands.rs  gui.rs  plugin.rs  state.rs
plugins/wrac-gain/src-plugin/src/commands/: cursor.rs  resize.rs
plugins/wrac-gain/src-plugin/src/gui/: notifier.rs  runtime.rs
plugins/wrac-gain/src-plugin/src/plugin/: audio_ports.rs  parameters.rs  params.rs  state.rs  state_support.rs
script/: build.sh  build_and_install.sh  build_standalone.sh  build_wrapper.sh  install.sh
src/: wrapasvst3.cpp
src-gui/: index.html  package-lock.json  package.json  vite.config.ts
src-gui/src/: main.ts  style.css
src-plugin/: Cargo.toml  README.md  build.rs
src-plugin/src/: audio.rs  commands.rs  gui.rs  lib.rs  logging.rs  params.rs  plugin.rs  state.rs
src-plugin/src/gui/: runtime.rs
src/detail/aax/: parameter.cpp  parameter.h  process.cpp  wrapper.h
src/detail/auv2/: auv2_base_classes.h
src/detail/auv2/build-helper/: build-helper.cpp
src/detail/clap/: fsutil.cpp
xtask/: Cargo.toml
xtask/src/: cli.rs  commands.rs  constants.rs  context.rs  main.rs  metadata.rs  targets.rs
