[workspace]
members = [
    "src-plugin",
    "xtask",
    "crates/wrac_clap_adapter",
    "crates/wrac_wxp_gui",
]
resolver = "2"

[workspace.dependencies]
novonotes_run_loop = { git = "https://github.com/novonotes/wxp.git", package = "novonotes_run_loop", rev = "a7494eb35d661df355217be5ed75ab832cfbcd44" }
run_loop_timer = { git = "https://github.com/novonotes/wxp.git", package = "run_loop_timer", rev = "a7494eb35d661df355217be5ed75ab832cfbcd44" }
wrac_clap_adapter = { path = "crates/wrac_clap_adapter" }
wrac_wxp_gui = { path = "crates/wrac_wxp_gui" }
wxp = { git = "https://github.com/novonotes/wxp.git", rev = "a7494eb35d661df355217be5ed75ab832cfbcd44" }
