[workspace]
members = [
    "plugins/wrac-gain/src-plugin",
    "xtask",
    "crates/wrac_clap_adapter",
    "crates/wrac_log",
    "crates/wrac_xtask",
    "crates/wrac_wxp_gui",
]
resolver = "2"

[workspace.dependencies]
clap-sys = "0.5.0"
novonotes_run_loop = { git = "https://github.com/novonotes/wxp.git", package = "novonotes_run_loop", rev = "e13c91e8effb625489d2487050226b75f1557a33" }
run_loop_timer = { git = "https://github.com/novonotes/wxp.git", package = "run_loop_timer", rev = "e13c91e8effb625489d2487050226b75f1557a33" }
wrac_clap_adapter = { path = "crates/wrac_clap_adapter" }
wrac_log = { path = "crates/wrac_log" }
wrac_wxp_gui = { path = "crates/wrac_wxp_gui" }
wxp = { git = "https://github.com/novonotes/wxp.git", rev = "e13c91e8effb625489d2487050226b75f1557a33" }
