[workspace]
members = [
    "plugins/wrac-gain/src-plugin",
    "xtask",
    "crates/wrac_clap_adapter",
    "crates/wrac_log",
    "crates/wrac_xtask",
    "crates/wrac_wxp_gui",
]
resolver = "2"

[workspace.dependencies]
clap-sys = "0.5.0"
novonotes_run_loop = { git = "https://github.com/novonotes/wxp.git", package = "novonotes_run_loop", rev = "0feb83811e0b7e65ed3f06a5c5ed8a9a77e9b717" }
run_loop_timer = { git = "https://github.com/novonotes/wxp.git", package = "run_loop_timer", rev = "0feb83811e0b7e65ed3f06a5c5ed8a9a77e9b717" }
wrac_clap_adapter = { path = "crates/wrac_clap_adapter" }
wrac_log = { path = "crates/wrac_log" }
wrac_wxp_gui = { path = "crates/wrac_wxp_gui" }
wxp = { git = "https://github.com/novonotes/wxp.git", rev = "0feb83811e0b7e65ed3f06a5c5ed8a9a77e9b717" }
