[package]
name = "wxp_example_gain_plugin"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
atomic_float = "1.1.0"
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "4541f03", features = ["audio-ports", "params", "clack-plugin", "gui", "state"] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git", rev = "4541f03" }
log = "0.4"
novonotes_run_loop = { git = "https://github.com/novonotes/run_loop.git", rev = "2779a6400cc99a8728052ba4df1c475a492849de" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wxp = { git = "https://github.com/novonotes/wxp.git", rev = "ace80b6a158ee342dd0e98c78bdcbe622d61040f" }
wxp_clack = { git = "https://github.com/novonotes/wxp.git", rev = "ace80b6a158ee342dd0e98c78bdcbe622d61040f" }

[lints.rust]
unreachable_pub = "deny"

[build-dependencies]
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
