[package]
name = "wrac_gain_plugin"
version = "0.1.0"
edition = "2024"
description = "Example gain plugin for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false
build = "build.rs"

# Plugin identity lives here so descriptors, GUI metadata, bundle names,
# wrapper arguments, AUv2 codes, WebView data dirs, and log names all move
# together when this template is renamed.
[package.metadata.wrac]
plugin_id = "com.your-company.wrac-gain"
plugin_name = "WRAC Gain"
company_name = "Your Company"
auv2_type = "aufx"
auv2_subtype = "WtGn"
auv2_manufacturer_code = "YrCo"
standalone_name = "WRAC Gain Standalone"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = ["backtrace"] }
atomic_float = "1.1.0"
directories = "5"
log = "0.4"
novonotes_run_loop = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
run_loop_timer = { workspace = true }
wrac_clap_adapter = { workspace = true }
wrac_wxp_gui = { workspace = true }
wxp = { workspace = true }

[lints.rust]
unreachable_pub = "deny"

[build-dependencies]
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
