[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
description = "Repository-local build tasks for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
wrac_xtask = { path = "../crates/wrac_xtask" }
