[package]
name = "wrac_wxp_gui"
version = "0.1.0"
edition = "2024"
description = "wxp GUI helper for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
readme = "README.md"
publish = false

[dependencies]
directories = "5"
log = "0.4"
novonotes_run_loop = { workspace = true }
parking_lot = "0.12"
raw-window-handle = "0.6"
url = "2"
wrac_clap_adapter = { workspace = true }
wxp = { workspace = true }

[lints.rust]
unreachable_pub = "deny"
