[package]
name = "wrac_xtask"
version = "0.1.0"
edition = "2024"
description = "Shared build tasks for WRAC plugin repositories"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false

[dependencies]
cargo_metadata = "0.19"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
