[package]
name = "wrac_gain_plugin"
version = "0.1.0"
edition = "2024"
description = "Example gain plugin for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false
build = "build.rs"

# WRAC metadata is the single source of truth for descriptors, GUI metadata,
# bundle names, wrapper arguments, AUv2 registration, WebView data dirs, and logs.
[package.metadata.wrac]
# User-visible vendor name shown by hosts and the template GUI.
company_name = "Your Company"
# AUv2 manufacturer code. Use the same 4-byte ASCII code across your plugin catalog.
auv2_manufacturer_code = "YrCo"
# User-visible bundle name.
bundle_name = "WRAC Gain"
# User-visible standalone app name.
standalone_name = "WRAC Gain Standalone"

[[package.metadata.wrac.plugins]]
# Reverse-DNS identifier. Use your own domain or another namespace you control.
plugin_id = "com.your-company.wrac-gain"
# User-visible plugin name shown by hosts and the template GUI.
plugin_name = "WRAC Gain"
# AUv2 component type. Audio effects usually use "aufx"; instruments usually use "aumu".
auv2_type = "aufx"
# AUv2 subtype. Pick a unique 4-byte ASCII code for each plugin from the same vendor.
auv2_subtype = "WtGn"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = ["backtrace"] }
atomic_float = "1.1.0"
log = "0.4"
novonotes_run_loop = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
run_loop_timer = { workspace = true }
wrac_clap_adapter = { workspace = true }
wrac_log = { workspace = true }
wrac_wxp_gui = { workspace = true }
wxp = { workspace = true }

[lints.rust]
unreachable_pub = "deny"

[build-dependencies]
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
