[package]
name = "wrac_gain_plugin"
version = "0.1.0"
edition = "2024"
description = "Example gain plugin for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false
build = "build.rs"

# WRAC metadata is the single source of truth for host-visible descriptors,
# GUI About metadata, bundle names, wrapper arguments, AUv2 registration,
# WebView data dirs, and logs. Set these explicitly before shipping; changing
# public IDs or FourCC values after release can break host project recall.
[package.metadata.wrac]
# User-visible vendor name shown by hosts and the template GUI.
company_name = "Your Company"
# AUv2 manufacturer code. Use the same 4-byte ASCII code across your AUv2 plugin catalog.
auv2_manufacturer_code = "YrCo"
# Shared CLAP/VST3 bundle name. Product-specific AU bundles use plugin_name below.
bundle_name = "WRAC Gain"
# Reverse-DNS bundle identifier used by macOS bundles. Keep it stable.
bundle_identifier = "com.your-company.wrac-gain"
# Commercial metadata shown by hosts and About views where supported.
homepage_url = "https://example.com/wrac-gain"
manual_url = "https://example.com/wrac-gain/manual"
support_url = "https://example.com/support"
description = "Simple gain plugin"
copyright = "Copyright 2026 Your Company"

[package.metadata.wrac.validation.disabled_rules.fender-studio-pro-generic-editor-single-knob]
reason = "WRAC Gain is a minimal one-knob starter example. Products that support Fender Studio Pro should add a second real visible control instead of shipping this exception."

[[package.metadata.wrac.plugins]]
# Reverse-DNS identifier. Use your own domain or another namespace you control.
plugin_id = "com.your-company.wrac-gain"
# User-visible plugin name shown by hosts and the template GUI.
plugin_name = "WRAC Gain"
# CLAP feature identifiers used in the generated CLAP descriptor.
clap_features = ["audio-effect", "utility", "stereo"]
# User-visible standalone app name.
standalone_name = "WRAC Gain Standalone"
# AUv2 component type. Audio effects usually use "aufx"; instruments usually use "aumu".
auv2_type = "aufx"
# AUv2 subtype. Pick a unique 4-byte ASCII code for each plugin from the same vendor.
auv2_subtype = "WtGn"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = ["backtrace"] }
atomic_float = "1.1.0"
log = "0.4"
novonotes_run_loop = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
run_loop_timer = { workspace = true }
wrac_clap_adapter = { workspace = true }
wrac_log = { workspace = true }
wrac_wxp_gui = { workspace = true }
wxp = { workspace = true }

[lints.rust]
unreachable_pub = "deny"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
