[package]
name = "wrac_gain_plugin"
version = "0.1.0"
edition = "2024"
description = "Example gain plugin for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false
build = "build.rs"

[package.metadata.wrac]
manifest = "wrac-plugin.toml"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = ["backtrace"] }
atomic_float = "1.1.0"
log = "0.4"
novonotes_run_loop = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
run_loop_timer = { workspace = true }
wrac_clap_adapter = { workspace = true }
wrac_log = { workspace = true }
wrac_wxp_gui = { workspace = true }
wxp = { workspace = true }

[lints.rust]
unreachable_pub = "deny"

[build-dependencies]
wrac_build = { path = "../../../crates/wrac_build" }
